--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,7 @@
 		is only used if fetchatonce=1
 	added singlestep directive to override postgresql fetchatonce option
 	added support for PDO in PHP 8.1
+	added affected rows to sqlrsh stats
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
