NULL -> 0 in PostgreSQL function tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -50,6 +50,7 @@
 	added singlestep directive to override postgresql fetchatonce option
 	added support for PDO in PHP 8.1
 	added affected rows to sqlrsh stats
+	NULL -> 0 in PostgreSQL function tests
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
