HH -> HH24 in a couple of places

--- a/AUTHORS
+++ b/AUTHORS
@@ -233,3 +233,6 @@ Joseph Caputo - Joseph.Caputo@broadridge.com
 
 Igor - laigor@mail.ru
 	configure.vbs internationalization patch
+
+Kyle Franklin - fanyikang1992@foxmail.com
+	fakeinputbindvariablesdateformat patch
