--- a/ChangeLog
+++ b/ChangeLog
@@ -101,6 +101,8 @@
 	added GVL management to the Ruby API
 	applied patch from Igor to fix configure.vbs VC++ version detection
 		for non-US versions
+	applied patch from Kyle to use HH24 instead of HH in default
+		fakeinputbindvariablesdateformat string
 
 1.8.0 - unattended tests
 	added sqlrresultsetdomnode class to c++ client API
