--- a/ChangeLog
+++ b/ChangeLog
@@ -54,6 +54,7 @@
 	added sqlrcrud class
 	applied patch from Kyle to use HH24 instead of HH in default
 		fakeinputbindvariablesdateformat string
+	removed sqlrresultsetdomnode class
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
