--- a/ChangeLog
+++ b/ChangeLog
@@ -56,6 +56,7 @@
 		fakeinputbindvariablesdateformat string
 	removed sqlrresultsetdomnode class
 	de-consted some things
+	added detection of newer java versions
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
