--- a/ChangeLog
+++ b/ChangeLog
@@ -61,6 +61,7 @@
 		to 5 now
 	implemented workaround for broken last-insert-id in libmariadbclient 18
 	added --with-node-gyp-python configure option
+	pwdenc_crypt -> pwdenc_des
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
