--- a/ChangeLog
+++ b/ChangeLog
@@ -67,6 +67,8 @@
 	fixed some subtle bugs in the replay module
 	fixed issue causing sqlr-connection not to shut down promptly when
 		waiting for a suspended client to reconnect
+	configure looks for python-major-dir in addition to python-dir when
+		looking for dist/site-packages now
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
