fixed bind leak

--- a/ChangeLog
+++ b/ChangeLog
@@ -70,6 +70,7 @@
 	configure looks for python-major-dir in addition to python-dir when
 		looking for dist/site-packages now
 	added upsert trigger
+	fixed bind leak in postgresql connection
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
