--- a/ChangeLog
+++ b/ChangeLog
@@ -72,6 +72,8 @@
 	added upsert trigger
 	fixed bind leak in postgresql connection
 	applied Dmitry Kasyanov's patch for python binary blobs
+	moved pwdenc-related stuff into libsqlrutil
+	moved sqlr-pwdenc from server to cmdline
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
