--- a/ChangeLog
+++ b/ChangeLog
@@ -74,6 +74,7 @@
 	applied Dmitry Kasyanov's patch for python binary blobs
 	moved pwdenc-related stuff into libsqlrutil
 	moved sqlr-pwdenc from server to cmdline
+	sqlrsh -id can decrypt two-way encrypted passwords now
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
