refactored error translation a bit and added tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -75,6 +75,8 @@
 	moved pwdenc-related stuff into libsqlrutil
 	moved sqlr-pwdenc from server to cmdline
 	sqlrsh -id can decrypt two-way encrypted passwords now
+	fixed bug in cistring patterns translation that caused strings to be
+		lower-cased
 
 1.9.2 - ruby cursor constructor marks associated ruby connection object now
 	updated bad-command and no-cursor-available handling in sqlrclient
